made search bar responsive

--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -2,8 +2,8 @@
 
 .wrapper{
   margin-top: 20px;
-  >img{
-    height: 50px;
-    width: 50px;
-  }
+  // >img{
+  //   height: 50px;
+  //   width: 50px;
+  // }
 }
