--- a/src/components/Characters/Characters.module.scss
+++ b/src/components/Characters/Characters.module.scss
@@ -1,7 +1,7 @@
 @import '../../global.module.scss';
 
 .wrapper{
-  margin-top: 150px;
+  margin-top: 50px;
 
   .heading{
     display: flex;
@@ -9,7 +9,7 @@
     justify-content: center;
     text-align: center;
     flex-direction: column;
-    margin-bottom: 50px;
+    // margin-bottom: 50px;
     >:nth-child(1){
      
       color: $primary;
