--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -12,7 +12,7 @@
     padding: 10px;
     align-items: center;
     justify-content: center;
-    width:550px;
+    // width:550px;
     >input{
       padding: 10px;
       margin:7px;
