--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -6,31 +6,32 @@ height: 10vh;
 display: flex;
 align-items: center;
 justify-content: center;
+position: relative;
 
   .logo{
-    margin-right: 50px;
+    position: absolute;
+    left: 20px;
 
   }
   .navlink{
-    margin: 10px;
-    align-self: center;
-    justify-self: center;
-    
-    text-decoration: none;
-    >:nth-child(1){
-      text-decoration: none;
-      margin-right: 10px;
-      padding: 10px;
-      background-color: blue;
-      color: #ffff;
+    position: absolute;
+    right: 20px;
+    @media (max-width: $sm),
+    (max-width: $md) {
+     padding: 10px;
 
     }
-    >:nth-child(2){
-      text-decoration: none;
-      margin-right: 10px;
-      padding: 10px;
-      background-color: blue;
-      color: #ffff;
+    display: flex;
+    align-items: center;
+    justify-content:center;
+    flex-direction: row;
+    .btn{
+      margin: 5px;
+      font-weight:500;
+      color:$primary;
+      text-decoration: underline;
     }
+    
   }
+ 
 }
