--- a/src/global.module.scss
+++ b/src/global.module.scss
@@ -15,7 +15,15 @@ $primary: darkblue;
 $secondary:#333333;
 $secondary-white: #E7E7E7;
 
-
+// .btn{
+//   display: flex;
+//   border: 1px solid grey;
+//   padding: 10px;
+//   margin-left: 10px;
+//   border-radius: 5px;
+//   background-color: darkblue;
+  
+// }
 .bg-primary {
   background-color: red;
 }
