--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -10,17 +10,20 @@
     .formcontrol{
       min-width: 450px;
 
+
       >input{
         padding: 5px;
       }
     }
   }
-  border: 1px solid red;
+ 
+  margin-top: 20px;
+  margin-bottom: 20px;
   display: flex;
   align-items: center;
   justify-content: center;
   .formcontrol{
-    border: 1px solid black;
+    // border: 1px solid black;
     display: flex;
     flex-direction: row;
     // padding: 10px;
@@ -33,9 +36,17 @@
       border-radius: 5px;
       border: 1px solid grey;
       // width:400px;
-      width: 50%;
-      
-     
+      width: 50%; 
+    }
+    >button{
+      display: flex;
+      align-items: center;
+      border: 1px solid grey;
+      padding: 10px;
+      margin-left: 10px;
+      border-radius: 5px;
+      color: #fff;
+      background-color: darkblue;
     }
   }
  
