fixed footer component

--- a/src/components/Characters/Characters.module.scss
+++ b/src/components/Characters/Characters.module.scss
@@ -34,6 +34,8 @@
     flex-wrap: wrap;
     .card{
       margin: 10px;
+      border: 1px solid darkblue;
+      border-radius: 10px;
     }
   }
 }
