updated pagination on location page

--- a/src/components/Locations/Locations.module.scss
+++ b/src/components/Locations/Locations.module.scss
@@ -35,5 +35,11 @@
       margin: 10px;
     }
   }
+  .pagination{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;  
+  }
 }
 
