--- a/src/components/Locations/Locations.module.scss
+++ b/src/components/Locations/Locations.module.scss
@@ -1,7 +1,7 @@
 @import '../../global.module.scss';
 
 .wrapper{
-  margin-top: 150px;
+  margin-top:50px;
 
   .heading{
     display: flex;
@@ -9,7 +9,7 @@
     justify-content: center;
     text-align: center;
     flex-direction: column;
-    margin-bottom: 50px;
+    // margin-bottom: 50px;
     >:nth-child(1){
      
       color: $primary;
@@ -31,8 +31,15 @@
     align-items: center;
     justify-content: space-evenly;
     flex-wrap: wrap;
+    padding-left: 50px;
+    padding-right: 50px;
     .card{
       margin: 10px;
+      border: 1px solid darkblue;
+      border-radius: 10px;
+      >img{
+        width: 100px;
+      }
     }
   }
   .pagination{
