--- a/src/global.scss
+++ b/src/global.scss
@@ -15,15 +15,7 @@ $primary: darkblue;
 $secondary:#333333;
 $secondary-white: #E7E7E7;
 
-// .btn{
-//   display: flex;
-//   border: 1px solid grey;
-//   padding: 10px;
-//   margin-left: 10px;
-//   border-radius: 5px;
-//   background-color: darkblue;
-  
-// }
+
 .bg-primary {
   background-color: red;
 }
@@ -150,4 +142,14 @@ $secondary-white: #E7E7E7;
   position: relative;
   top: -100px;
   visibility: hidden;
+}
+.redColor{
+  background-color: red;
+
+}
+.greenColor{
+  background-color: green;
+}
+.greyColor{
+  background-color: grey;
 }
