--- a/src/components/Residents/Residents.module.scss
+++ b/src/components/Residents/Residents.module.scss
@@ -53,6 +53,24 @@
       margin: 10px;
       border: 1px solid darkblue;
       border-radius: 10px;
+      position: relative;
+
+      .badge{
+        position: absolute;
+        color: #fff;
+        padding: 2px;
+        padding-left: 15px;
+        padding-right: 10px;
+        border: 1px solid white;
+        top: 5px;
+        right: 0px;
+        font-size: 17px;
+        width: 80px;
+        border-bottom-left-radius: 50px;
+        border-top-left-radius: 50px;
+        // background-color: green;
+       
+      }
     }
   }
   .pagination{
