--- a/src/components/Characters/Characters.module.scss
+++ b/src/components/Characters/Characters.module.scss
@@ -28,7 +28,7 @@
 
   .body{
     
-    border: 1px solid violet;
+    // border: 1px solid violet;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
@@ -47,11 +47,11 @@
         padding: 2px;
         padding-left: 15px;
         padding-right: 10px;
-        border: 1px solid white;
+        // border: 1px solid white;
         top: 5px;
         right: 0px;
         font-size: 17px;
-        width: 80px;
+        width: 90px;
         border-bottom-left-radius: 50px;
         border-top-left-radius: 50px;
         // background-color: green;
