--- a/src/components/Residents/Residents.module.scss
+++ b/src/components/Residents/Residents.module.scss
@@ -26,22 +26,12 @@
       font-weight: 400;
       color: $secondary;
 
-      // .blue{
-      //   color: darkblue;
-        
-      // }
-      // .red{
-      //   color: red;
-      // }
-      // .green{
-      //   color: green;
-      // }
     }
   }
 
   .body{
     
-    border: 1px solid violet;
+    // border: 1px solid violet;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
@@ -61,7 +51,7 @@
         padding: 2px;
         padding-left: 15px;
         padding-right: 10px;
-        border: 1px solid white;
+        // border: 1px solid white;
         top: 5px;
         right: 0px;
         font-size: 17px;
