--- a/src/components/Locations/Locations.module.scss
+++ b/src/components/Locations/Locations.module.scss
@@ -26,7 +26,7 @@
     }
   }
   .body{
-    border: 1px solid violet;
+    // border: 1px solid violet;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
