--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -6,4 +6,11 @@
   //   height: 50px;
   //   width: 50px;
   // }
+  .imgWrap{
+    .img{
+      height: 100%;
+      width: 100%;
+
+    }
+  }
 }
