--- a/src/global.scss
+++ b/src/global.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500&display=swap');
 
 *{
-  // background-color: #fafafa;
+  // background-color: #131528;
   font-family: 'Space Grotesk', sans-serif;
 }
 $sm :640px;
