formatted with prettier

--- a/src/components/Characters/Characters.module.scss
+++ b/src/components/Characters/Characters.module.scss
@@ -1,20 +1,19 @@
-@import '../../global.scss';
+@import "../../global.scss";
 
-.wrapper{
+.wrapper {
   margin-top: 50px;
 
-  .heading{
+  .heading {
     display: flex;
     align-items: center;
     justify-content: center;
     text-align: center;
     flex-direction: column;
     // margin-bottom: 50px;
-    >:nth-child(1){
-     
+    > :nth-child(1) {
       color: $primary;
     }
-    >:nth-child(2){
+    > :nth-child(2) {
       @media (max-width: $sm) {
         font-size: 1.1rem;
         line-height: 10px;
@@ -26,8 +25,7 @@
     }
   }
 
-  .body{
-    
+  .body {
     // border: 1px solid violet;
     display: flex;
     align-items: center;
@@ -35,13 +33,13 @@
     flex-wrap: wrap;
     padding-left: 50px;
     padding-right: 50px;
-    .card{
+    .card {
       height: fit-content;
       margin: 10px;
       border: 1px solid darkblue;
       border-radius: 10px;
       position: relative;
-      .badge{
+      .badge {
         position: absolute;
         color: #fff;
         padding: 2px;
@@ -55,17 +53,13 @@
         border-bottom-left-radius: 50px;
         border-top-left-radius: 50px;
         // background-color: green;
-       
       }
-   
     }
   }
-  .pagination{
+  .pagination {
     display: flex;
     align-items: center;
     justify-content: center;
     margin-top: 20px;
-    
   }
-
 }
