--- a/src/components/Filter/Filter.module.scss
+++ b/src/components/Filter/Filter.module.scss
@@ -1,69 +1,57 @@
-@import '../../global.scss';
+@import "../../global.scss";
 
-
-
-
-.wrapper{
+.wrapper {
   margin-bottom: 50px;
   position: relative;
 
-  @media 
-  (max-width: 500px) {
-    position:relative;
+  @media (max-width: 500px) {
+    position: relative;
     // border: 1px solid red;
- 
-    
-    >button{
-      position: absolute;
-     margin-top: 55px;
-     margin-right: -20px;
-     max-width: 45px;
-     max-height: 35px;
- 
-    }
 
+    > button {
+      position: absolute;
+      margin-top: 55px;
+      margin-right: -20px;
+      max-width: 45px;
+      max-height: 35px;
+    }
   }
 
-
-  >button{
+  > button {
     border-radius: 5px;
     position: absolute;
     right: 80px;
     top: -77px;
-    
+
     color: darkblue;
     // background-color: darkblue;
-    .icon{
-      width:40px;
+    .icon {
+      width: 40px;
       height: 44px;
       margin-right: 5px;
     }
   }
-  .options{
+  .options {
     display: flex;
     // border: 1px solid violet;
     flex-direction: row;
-    align-items:center;
+    align-items: center;
     justify-content: center;
     padding-top: 30px;
-
   }
-  .formControl{
-    font-family: 'Space Grotesk';
+  .formControl {
+    font-family: "Space Grotesk";
   }
-  .clear{
+  .clear {
     color: darkblue;
     text-decoration: underline;
   }
 }
 
-
-
-
 @media (max-width: 390px) {
-  .wrapper{
+  .wrapper {
     position: relative;
-    >button{
+    > button {
       position: absolute;
       // padding-left:70px;
       margin-right: -70px;
