--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -1,16 +1,15 @@
-@import '../../global.scss';
+@import "../../global.scss";
 
-.wrapper{
+.wrapper {
   margin-top: 20px;
   // >img{
   //   height: 50px;
   //   width: 50px;
   // }
-  .imgWrap{
-    .img{
+  .imgWrap {
+    .img {
       height: 100%;
       width: 100%;
-
     }
   }
 }
