--- a/src/components/Locations/Locations.module.scss
+++ b/src/components/Locations/Locations.module.scss
@@ -1,20 +1,19 @@
-@import '../../global.scss';
+@import "../../global.scss";
 
-.wrapper{
-  margin-top:50px;
+.wrapper {
+  margin-top: 50px;
 
-  .heading{
+  .heading {
     display: flex;
     align-items: center;
     justify-content: center;
     text-align: center;
     flex-direction: column;
     // margin-bottom: 50px;
-    >:nth-child(1){
-     
+    > :nth-child(1) {
       color: $primary;
     }
-    >:nth-child(2){
+    > :nth-child(2) {
       @media (max-width: $sm) {
         font-size: 1.1rem;
         line-height: 10px;
@@ -25,7 +24,7 @@
       color: $secondary;
     }
   }
-  .body{
+  .body {
     // border: 1px solid violet;
     display: flex;
     align-items: center;
@@ -33,20 +32,19 @@
     flex-wrap: wrap;
     padding-left: 50px;
     padding-right: 50px;
-    .card{
+    .card {
       margin: 10px;
       border: 1px solid darkblue;
       border-radius: 10px;
-      >img{
+      > img {
         width: 100px;
       }
     }
   }
-  .pagination{
+  .pagination {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 20px;  
+    margin-top: 20px;
   }
 }
-
