made filter responsive

--- a/src/components/Filter/Filter.module.scss
+++ b/src/components/Filter/Filter.module.scss
@@ -38,6 +38,9 @@
     align-items: center;
     justify-content: center;
     padding-top: 30px;
+    @media(max-width: $sm),(max-width: $md){
+     flex-direction: column; 
+    }
   }
   .formControl {
     font-family: "Space Grotesk";
